--- a/Flax/Flax.csproj
+++ b/Flax/Flax.csproj
@@ -61,14 +61,19 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClickType.cs" />
     <Compile Include="FindBy.cs" />
+    <Compile Include="MouseButton.cs" />
     <Compile Include="WindowsAutomation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Windows\AutomationPropertyExtensions.cs" />
+    <Compile Include="Windows\Capture.cs" />
     <Compile Include="Windows\FlaxCV.cs" />
     <Compile Include="Windows\FlaxMouse.cs" />
     <Compile Include="Windows\FlaxProcess.cs" />
     <Compile Include="Windows\FlaxWindow.cs" />
     <Compile Include="Windows\FlaxKeyboard.cs" />
+    <Compile Include="Windows\HoverMode.cs" />
     <Compile Include="Windows\UIElement.cs" />
     <Compile Include="Windows\Win32API.cs" />
   </ItemGroup>
